Added packages - next, pm2, react, react-dom

--- a/.docker/node-nginx/Dockerfile
+++ b/.docker/node-nginx/Dockerfile
@@ -1,6 +1,6 @@
 FROM sinet/nginx-node:latest
 
-RUN npm install -g create-react-app pm2
+RUN npm install -g react react-dom create-react-app pm2 next
 
 COPY default.conf /etc/nginx/conf.d/
 
